--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,29 +1,34 @@
 body {
-    background: #fafafa;
+    background: #232323;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #333;
 }
 
-.hero-unit {
-    margin: 50px auto 0 auto;
-    width: 300px;
+.tokenRuler {
+    margin: 30px auto 0 auto;
+    width: 90%;
     font-size: 18px;
     font-weight: 200;
-    line-height: 30px;
+    line-height: 50px;
     background-color: #eee;
     border-radius: 6px;
-    padding: 60px;
+    padding: 20px 20px 80px;
 }
 
-.hero-unit h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
+.tokenRuler>span {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    height: 50px;
+    width: 2.4%;
+    border: solid #232323 1px;
+    float: right;
 }
 
-.browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+.tokenRuler>span>div {
+    height: 10%;
+    width: 80%;
+    border: solid navajowhite 1px;
+    background: orangered;
+    margin: 0 auto;
 }
+
