--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,27 +8,42 @@ body {
     margin: 30px auto 0 auto;
     width: 90%;
     font-size: 18px;
-    font-weight: 200;
-    line-height: 50px;
     background-color: #eee;
     border-radius: 6px;
-    padding: 20px 20px 80px;
+    padding: 20px 20px 380px;
 }
 
 .tokenRuler>div>span {
     padding-top: 5px;
     padding-bottom: 5px;
-    height: 50px;
+    height: 340px;
     width: 2.4%;
     border: solid #232323 1px;
     float: right;
 }
 
 .tokenRuler>div>span>div {
-    height: 10%;
+    height: 1%;
     width: 80%;
     border: solid navajowhite 1px;
-    background: orangered;
+    background: #ff4500;
     margin: 0 auto;
+}
+
+.tokenRuler>div>span>div {
+    position: relative;
+}
+
+.tokenRuler>div>span>div:active:after {
+    background: #f5f5f5;
+    border: 1px solid #ff4500;
+    border-radius: 6px;
+    padding: 1px 5px;
+    content: attr(data-token-id);
+    font-size: 20px;
+    line-height: 32px;
+    position: absolute;
+    top: -16px;
+    z-index: 1;
 }
 
