--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -30,10 +30,6 @@ body {
     margin: 0 auto;
 }
 
-.tokenRuler>div>span>div {
-    position: relative;
-}
-
 .tokenRuler>div>span>div:active:after {
     background: #f5f5f5;
     border: 1px solid #ff4500;
@@ -47,3 +43,55 @@ body {
     z-index: 1;
 }
 
+/* when in panic, when in doubt - run in circles, scream and shout*/
+
+.token-circle-container {
+    position: relative;
+    width: 24em;
+    height: 24em;
+    padding: 2.8em; /*= 2em * 1.4 (2em = half the width of an img, 1.4 = sqrt(2))*/
+    border: dashed 1px;
+    border-radius: 50%;
+    margin: 1.75em auto 0;
+}
+.token-circle-container span {
+    display: block;
+    position: absolute;
+    top: 50%; left: 50%;
+    width: 2em; height: 2em;
+    margin: -2em; /* 2em = 4em/2 */ /* half the width */
+}
+
+.token-circle-container:after {
+    position: absolute;
+    top: 2.8em; left: 2.8em;
+    width: 24em; height: 24em;
+    border: dashed 1px deeppink;
+    border-radius: 50%;
+    opacity: .3;
+    content: '';
+}
+
+.token-circle-container span>div:after {
+    position: absolute;
+    top: 50%; left: 50%;
+    width: 2em; height: 2em;
+    border-radius: 50%;
+    box-shadow: 0 0 .5em .5em white;
+    margin: -2px;
+    background: transparent;
+    opacity: .9;
+    content: '';
+}
+
+.token-circle-container span>div:hover:after {
+    color: #ff4500;
+    font-size: 24px;
+    content: attr(data-token-id);
+    z-index: 1;
+}
+/*.token-circle-container span>div:hover:before {*/
+    /*color: #ff4500;*/
+    /*content: attr(data-token-id);*/
+    /*z-index: 1;*/
+/*}*/
