--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -11,35 +11,35 @@ body {
 .tokens-radius {
     position: absolute;
     height: 400px;
-    width: 30px;
+    width: 0;
     float: left;
+    -webkit-transform-origin:0 50%;
 }
 
 .tokens-box {
     position: absolute;
     bottom: 280px;
     top: 0;
-    /*background: pink;*/
-    margin: 5px;
+    margin-left: -6px;
     -webkit-transform:rotate(180deg);
 }
 
 .token {
-    background: skyblue;
+    background: #87ceeb;
     height: 5px;
     margin: 3px;
     width: 10px;
 }
 
-.token:after:hover {
+.token:active:after {
     background: #f5f5f5;
-    border: 1px solid #ff4500;
-    border-radius: 6px;
-    padding: 1px 5px;
+    border: 1px solid #87ceeb;
+    border-radius: 5px;
+    padding: 5px;
     content: attr(data-token-id);
-    font-size: 20px;
-    line-height: 32px;
+    font-size: 10px;
+    line-height: 10px;
     position: absolute;
-    top: -16px;
+    top: 5px;
 }
 
